add music n tywriter

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
          </head>
          <body>
             <div class="container">
-                <img src="image/UNDER CON$TRUCTI🤫N.png" class="img">
-            </div>
+                  <img src="assets/UNDER CON$TRUCTI🤫N.png" class="img">
+                  <audio id="audiox" src="assets/rex orange theraphy - Copy.mp3" autoplay></audio>
+                  <h1>
+                     You're Listening to <span id="typewriter"></span
+                     ><span id="cursor">|</span>
+                   </h1>
+               </div>
+            <script src="funx.js"></script>
          </body>
    </html>
 
