add music n typewriter

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <body>
             <div class="container">
                   <img src="assets/UNDER CON$TRUCTI🤫N.png" class="img">
-                  <audio id="audiox" src="assets/rex orange theraphy - Copy.mp3" autoplay></audio>
+                  <audio id="audiox" src="assets/therapy rex orange county.mp3" autoplay></audio>
                   <h1>
                      You're Listening to <span id="typewriter"></span
                      ><span id="cursor">|</span>
