--- a/backup.html
+++ b/backup.html
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
    <html lang="en">
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
-      <link rel="stylesheet" href="style.css">
-         <title>Under c0n$TruCtioN - yp</title>
+      <link rel="stylesheet" href="style.css">  
+        <title>Under c0n$TruCtioN - yp</title>
          </head>
          <body>
             <div class="container">
-               <img src="assets/UNDER CON$TRUCTI🤫N.png" class="img">
-               <audio id="audiox" src="assets/therapy rex orange county.aac"></audio>   
+                <img src="assets/UNDER CON$TRUCTI🤫N.png" class="img">
+                <audio id="audiox" src="assets/therapy rex orange county.aac"></audio>   
                   <h1>
                      You should listen to <span id="typewriter"></span
                      ><span id="cursor">|</span>
-                  </h1>
-               <div class="audio_player">
-                  <button id="audio_play" class="playxpause"><i class="ri-play-circle-fill" id="img_button"></i></button>
+                   </h1>
+                   <div>
+                     <button onclick="playAudio();"><i class="ri-play-circle-fill"></i></button>
+                     <button onclick="pauseAudio();"><i class="ri-pause-circle-line"></i></button>
+                   </div>
                </div>
-            </div>
             <script src="funx.js">
             </script>
          </body>
    </html>
-
+ -->
